--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <h1>We invent, develop, and provide proprietary hybrid materials<br>for next-generation radiation scintillation and detection.</h1>
           <p class="hero__subtitle">Advancing security, safety, imaging, nuclear medicine, and non-destructive testing.</p>
           <div class="hero__buttons">
-            <a href="technology.html" class="btn btn--primary">Our Technology →</a>
-            <a href="products.html" class="btn btn--secondary">Our Products</a>
+            <a href="./technology.html" class="btn btn--primary">Our Technology →</a>
+            <a href="./products.html" class="btn btn--secondary">Our Products</a>
           </div>
         </div>
         <div class="hero__visual">
