--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
       <section class="hero">
         <div class="hero__content">
-          <h1>We invent, develop, and provide proprietary hybrid materials<br>for next-generation radiation scintillation and detection.</h1>
+          <h1>We invent, develop, and provide proprietary hybrid materials for next-generation radiation scintillation and detection.</h1>
           <p class="hero__subtitle">Advancing security, safety, imaging, nuclear medicine, and non-destructive testing.</p>
           <div class="hero__buttons">
             <a href="./technology.html" class="btn btn--primary">Our Technology →</a>
