--- a/products.html
+++ b/products.html
@@ -17,8 +17,6 @@
   </style>
 </head>
 <body>
-
-
   <main>
     <!-- Hero Section -->
     <section class="hero-section">
@@ -29,7 +27,7 @@
     </section>
 
     <div class="container">
-      <!-- OD OMHH Materials Section -->
+      <!-- 0D OMHH Materials Section -->
       <section class="materials-section">
         <div class="materials-content">
           <div class="materials-text">
@@ -136,8 +134,6 @@
       </section>
     </div>
   </main>
-
-
 
   <script type="module" src="/src/main.js"></script>
 </body>
