--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     .container{margin-left:115px;margin-right:0;padding:24px;max-width:none}
     main{padding:210px 0 0px 0}
   </style>
-  <script type="module" crossorigin src="/rgmatters/assets/main-C4P09YHM.js"></script>
-  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-BFof_sCV.css">
+  <script type="module" crossorigin src="/rgmatters/assets/main-CIc2KQiG.js"></script>
+  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-DbObo_uo.css">
 </head>
 <body>
   <main>
     <div class="container">
       <section class="hero">
         <div class="hero__content">
-          <h1>We invent, develop, and provide proprietary hybrid materials<br>for next-generation radiation scintillation and detection.</h1>
+          <h1>We invent, develop, and provide proprietary hybrid materials for next-generation radiation scintillation and detection.</h1>
           <p class="hero__subtitle">Advancing security, safety, imaging, nuclear medicine, and non-destructive testing.</p>
           <div class="hero__buttons">
             <a href="./technology.html" class="btn btn--primary">Our Technology →</a>
