--- a/products.html
+++ b/products.html
@@ -15,12 +15,10 @@
     body{background:#ffffff;color:#1a1a1a}
     .container{margin-left:115px;margin-right:0;padding:24px;max-width:none}
   </style>
-  <script type="module" crossorigin src="/rgmatters/assets/main-C4P09YHM.js"></script>
-  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-BFof_sCV.css">
+  <script type="module" crossorigin src="/rgmatters/assets/main-CIc2KQiG.js"></script>
+  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-DbObo_uo.css">
 </head>
 <body>
-
-
   <main>
     <!-- Hero Section -->
     <section class="hero-section">
@@ -31,7 +29,7 @@
     </section>
 
     <div class="container">
-      <!-- OD OMHH Materials Section -->
+      <!-- 0D OMHH Materials Section -->
       <section class="materials-section">
         <div class="materials-content">
           <div class="materials-text">
@@ -138,8 +136,6 @@
       </section>
     </div>
   </main>
-
-
 
 </body>
 </html>
