--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <section class="hero">
         <div class="hero__content">
           <h1>We invent, develop, and provide proprietary hybrid materials for next-generation radiation scintillation and detection.</h1>
-          <p class="hero__subtitle">Advancing security, safety, imaging, nuclear medicine, and non-destructive testing.</p>
+          <p class="hero__subtitle">Advancing security, safety, nuclear medicine, non-destructive testing, imaging, and high energy science.</p>
           <div class="hero__buttons">
             <a href="./technology.html" class="btn btn--primary">Our Technology →</a>
             <a href="./products.html" class="btn btn--secondary">Our Products</a>
