--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@
     body{background:#ffffff;color:#1a1a1a}
     .container{margin-left:115px;margin-right:0;padding:24px;max-width:none}
   </style>
-  <script type="module" crossorigin src="/rgmatters/assets/main-CIc2KQiG.js"></script>
-  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-DbObo_uo.css">
+  <script type="module" crossorigin src="/rgmatters/assets/main-CxEm27AS.js"></script>
+  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-B0KTyt-O.css">
 </head>
 <body>
 
@@ -33,7 +33,7 @@
     <div class="container">
       <!-- Introduction Section -->
       <section class="intro-section">
-        <p class="intro-text"><strong>Roentgen Matters LLC</strong> is a deep-tech startup commercializing novel hybrid materials for next-generation radiation scintillation and detection. Building upon groundbreaking research in organic-inorganic hybrid scintillators and direct detectors, our technology provides a powerful new solution for security, nuclear, industrial, and medical radiation applications.</p>
+        <p class="intro-text"><strong>Roentgen Matters LLC</strong> is a deep-tech startup commercializing novel hybrid materials for next-generation radiation scintillation and detection. Building upon groundbreaking research in organic–inorganic hybrid scintillators and direct detectors, our technology provides a powerful new radiation solution for homeland security, nuclear industry, nuclear medicine, industrial non-destructive testing, and medical imaging, and high energy physics applications.</p>
       </section>
 
       <!-- Mission & Vision Section -->
@@ -52,7 +52,7 @@
           <div class="mission-card">
             <h2>Our Mission</h2>
             <h3>Engineering Next-Generation Detection Solutions</h3>
-            <p>Our mission is to engineer novel hybrid materials for next-generation radiation scintillators and detectors, delivering high-performance, scalable solutions for security, nuclear, industrial, and medical markets.</p>
+            <p>Our mission is to engineer novel hybrid materials for next-generation radiation scintillators and detectors, delivering high-performance, scalable solutions for homeland security, nuclear industry, nuclear medicine, industrial non-destructive testing, medical imaging, and high energy physics markets.</p>
           </div>
           
           <div class="mission-image">
@@ -68,7 +68,7 @@
           <div class="leader-card">
             <h3>Dr. Zhonghui Chen</h3>
             <div class="title">Cofounder & CEO</div>
-            <p>Dr. Chen brings over 20 years of semiconductor R&D and manufacturing leadership experience at Intel Corp. He has extensive expertise in translating cutting-edge research into impactful technologies for photon detection and has successfully led multiple technology development programs from concept to commercialization.</p>
+            <p>Dr. Chen is a seasoned leader with 20 years of experience in semiconductor R&D and manufacturing at Intel Corp. He has a proven track record of translating cutting-edge research into commercially impactful technologies. A former assistant professor specializing in inorganic materials and devices for photon detection at USC and CUNY before joining Intel, he now leads the effort to bring these groundbreaking hybrid materials for radiation detection from lab to market.</p>
             <div class="leader-buttons">
               <a href="#" class="leader-button">
                 🔗 LinkedIn
@@ -79,7 +79,7 @@
           <div class="leader-card">
             <h3>Dr. Biwu Ma</h3>
             <div class="title">Cofounder & CTO</div>
-            <p>Dr. Ma is the inventor of zero-dimensional (0D) organic metal halide hybrid (OMHH) materials and a professor at Florida State University. He is an internationally recognized expert in optoelectronics and radiation detection with over 20 issued U.S. patents and extensive experience in materials science and device engineering.</p>
+            <p>Dr. Ma, a world-renowned expert in a range of advanced materials, is a professor of chemistry and biochemistry at Florida State University. He invented zero-dimensional organic metal halide hybrid (0D-OMHH) materials. With over 20 years of academic research experience, his work spans organic materials and organic-inorganic hybrid materials for applications in radiation detection, optoelectronics, electronics, and sensors. Dr. Ma holds more than 20 issued U.S. patents on organic and hybrid materials.</p>
             <div class="leader-buttons">
               <a href="#" class="leader-button">
                 🔗 LinkedIn
