--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     .container{margin-left:115px;margin-right:0;padding:24px;max-width:none}
     main{padding:210px 0 0px 0}
   </style>
-  <script type="module" crossorigin src="/rgmatters/assets/main-CIc2KQiG.js"></script>
-  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-DbObo_uo.css">
+  <script type="module" crossorigin src="/rgmatters/assets/main-CxEm27AS.js"></script>
+  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-B0KTyt-O.css">
 </head>
 <body>
   <main>
@@ -25,7 +25,7 @@
       <section class="hero">
         <div class="hero__content">
           <h1>We invent, develop, and provide proprietary hybrid materials for next-generation radiation scintillation and detection.</h1>
-          <p class="hero__subtitle">Advancing security, safety, imaging, nuclear medicine, and non-destructive testing.</p>
+          <p class="hero__subtitle">Advancing security, safety, nuclear medicine, non-destructive testing, imaging, and high energy science.</p>
           <div class="hero__buttons">
             <a href="./technology.html" class="btn btn--primary">Our Technology →</a>
             <a href="./products.html" class="btn btn--secondary">Our Products</a>
