--- a/products.html
+++ b/products.html
@@ -15,8 +15,8 @@
     body{background:#ffffff;color:#1a1a1a}
     .container{margin-left:115px;margin-right:0;padding:24px;max-width:none}
   </style>
-  <script type="module" crossorigin src="/rgmatters/assets/main-CIc2KQiG.js"></script>
-  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-DbObo_uo.css">
+  <script type="module" crossorigin src="/rgmatters/assets/main-CxEm27AS.js"></script>
+  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-B0KTyt-O.css">
 </head>
 <body>
   <main>
@@ -24,7 +24,7 @@
     <section class="hero-section">
       <div class="hero-content">
         <div class="hero-header">OUR PRODUCTS</div>
-        <h1 class="hero-title">Proprietary 0D OMHH Materials for Radiation Scintillation and Detection</h1>
+        <h1 class="hero-title">Proprietary 0D-OMHH Materials for Radiation Scintillation and Detection</h1>
       </div>
     </section>
 
@@ -34,8 +34,8 @@
         <div class="materials-content">
           <div class="materials-text">
             <h2>0D OMHH Materials</h2>
-            <p>Roentgen Matters offers proprietary, cutting-edge zero-dimensional (0D) organic metal halide hybrid (OMHH) material samples engineered for scalable, and high-performance solutions across various radiation detection applications.</p>
-            <p>Our materials can detect <strong>X-rays, gamma rays, beta ray, muons, neutrons, and other high-energy particles</strong>, serving critical needs across security screening, nuclear detection, industrial inspection, and medical imaging sectors etc.</p>
+            <p>Roentgen Matters offers proprietary, cutting-edge zero-dimensional organic metal halide hybrid (0D-OMHH) material samples engineered for scalable, and high-performance solutions across various radiation detection applications.</p>
+            <p>Our materials can detect <strong>X-rays, gamma rays, neutrons, beta ray, muons, and other high-energy particles</strong>, serving critical needs across homeland security, nuclear industry, nuclear medicine, industrial non-destructive testing, medical imaging, and high energy physics sectors etc.</p>
           </div>
           <div class="materials-image">
             <img src="/rgmatters/product.png" alt="Flexible glowing material sheet">
