--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     <div class="container">
       <!-- Introduction Section -->
       <section class="intro-section">
-        <p class="intro-text"><strong>Roentgen Matters LLC</strong> is a deep-tech startup commercializing novel hybrid materials for next-generation radiation scintillation and detection. Building upon groundbreaking research in organic–inorganic hybrid scintillators and direct detectors, our technology provides a powerful new radiation solution for homeland security, nuclear industry, nuclear medicine, industrial non-destructive testing, and medical imaging, and high energy physics applications.</p>
+        <p class="intro-text"><strong>Roentgen Matters LLC</strong> is a deep-tech startup commercializing novel hybrid materials for next-generation radiation scintillation and detection. Building upon groundbreaking research in organic–inorganic hybrid scintillators and direct detectors, our technology provides a powerful new radiation solution for homeland security, nuclear industry, nuclear medicine, industrial non-destructive testing, medical imaging, and high energy physics applications.</p>
       </section>
 
       <!-- Mission & Vision Section -->
@@ -49,7 +49,7 @@
           
           <div class="mission-card">
             <h2>Our Mission</h2>
-            <h3>Engineering Next-Generation Detection Solutions</h3>
+            <h3>Innovating Materials for Radiation Scintillators and Detectors</h3>
             <p>Our mission is to engineer novel hybrid materials for next-generation radiation scintillators and detectors, delivering high-performance, scalable solutions for homeland security, nuclear industry, nuclear medicine, industrial non-destructive testing, medical imaging, and high energy physics markets.</p>
           </div>
           
@@ -68,7 +68,7 @@
             <div class="title">Cofounder & CEO</div>
             <p>Dr. Chen is a seasoned leader with 20 years of experience in semiconductor R&D and manufacturing at Intel Corp. He has a proven track record of translating cutting-edge research into commercially impactful technologies. A former assistant professor specializing in inorganic materials and devices for photon detection at USC and CUNY before joining Intel, he now leads the effort to bring these groundbreaking hybrid materials for radiation detection from lab to market.</p>
             <div class="leader-buttons">
-              <a href="#" class="leader-button">
+              <a href="https://www.linkedin.com/in/zhonghuichen/" target="_blank" class="leader-button">
                 🔗 LinkedIn
               </a>
             </div>
@@ -79,10 +79,10 @@
             <div class="title">Cofounder & CTO</div>
             <p>Dr. Ma, a world-renowned expert in a range of advanced materials, is a professor of chemistry and biochemistry at Florida State University. He invented zero-dimensional organic metal halide hybrid (0D-OMHH) materials. With over 20 years of academic research experience, his work spans organic materials and organic-inorganic hybrid materials for applications in radiation detection, optoelectronics, electronics, and sensors. Dr. Ma holds more than 20 issued U.S. patents on organic and hybrid materials.</p>
             <div class="leader-buttons">
-              <a href="#" class="leader-button">
+              <a href="https://www.linkedin.com/in/biwu-ma-53b59610/" target="_blank" class="leader-button">
                 🔗 LinkedIn
               </a>
-              <a href="#" class="leader-button research-button">
+              <a href="https://www.chem.fsu.edu/~ma/" target="_blank" class="leader-button research-button">
                 🔬 Research Group Website
               </a>
             </div>
