--- a/technology.html
+++ b/technology.html
@@ -54,7 +54,7 @@
           <div class="solution-content">
             <div class="solution-visual">
               <div class="solution-image">
-                <img src="/tech0.png" alt="Technology Visualization">
+                <img src="/tech0.jpg" alt="Photo of 0D-OMHHs">
               </div>
             </div>
             <div class="problem-text">
@@ -151,7 +151,7 @@
                 <div class="performance-value">5-10×</div>
                 <div class="performance-label">Light Yield</div>
                 
-                <div class="performance-value">18×</div>
+                <div class="performance-value">20×</div>
                 <div class="performance-label">Response Speed</div>
                 
                 <div class="performance-value">5-100×</div>
