--- a/products.html
+++ b/products.html
@@ -33,7 +33,7 @@
       <section class="materials-section">
         <div class="materials-content">
           <div class="materials-text">
-            <h2>0D OMHH Materials</h2>
+            <h2>0D-OMHH Materials</h2>
             <p>Roentgen Matters offers proprietary, cutting-edge zero-dimensional organic metal halide hybrid (0D-OMHH) material samples engineered for scalable, and high-performance solutions across various radiation detection applications.</p>
             <p>Our materials can detect <strong>X-rays, gamma rays, neutrons, beta ray, muons, and other high-energy particles</strong>, serving critical needs across homeland security, nuclear industry, nuclear medicine, industrial non-destructive testing, medical imaging, and high energy physics sectors etc.</p>
           </div>
