favicon & mobile view fixes

--- a/technology.html
+++ b/technology.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/favicon.svg" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ROENTGEN MATTERS — Our Technology</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -58,8 +59,8 @@
               </div>
             </div>
             <div class="problem-text">
-              <p>Our patented organic–inorganic hybrid materials, known as zero-dimensional organic metal halide hybrids (0D-OMHHs), are designed to drive the next generation of radiation scintillators and detectors. These advanced 0D-OMHH materials uniquely combine the benefits of both organic and inorganic materials, offering a powerful synergy of high-sensitivity, fast response, non-hygroscopicity, flexibility, and scalability through low-cost synthesis. This breakthrough technology enables the creation of affordable, flexible, large-area radiation scintillators and detectors with high sensitivity and fast response. This will spur innovation in critical sectors such as homeland security, nuclear industry, nuclear medicine, industrial non-destructive testing, medical imaging, and high energy physics.</p>
-              <p>Furthermore, our 0D-OMHHs are non-toxic, lead-free, and rare-earth-free, and they are fabricated with energy-saving processing, offering a sustainable alternative that aligns with the environmental goals of modern industries and regulatory standards.</p>
+              <p>Our patented organic–inorganic hybrid materials, known as zero-dimensional organic metal halide hybrids (0D-OMHHs), are designed to drive the next generation of radiation scintillators and detectors. These advanced 0D-OMHH materials uniquely combine the benefits of both organic and inorganic materials, <strong>offering a powerful synergy of high-sensitivity, fast response, non-hygroscopicity, flexibility, and scalability through low-cost synthesis</strong>. This breakthrough technology enables the creation of affordable, flexible, large-area radiation scintillators and detectors with high sensitivity and fast response. This will spur innovation in critical sectors such as homeland security, nuclear industry, nuclear medicine, industrial non-destructive testing, medical imaging, and high energy physics.</p>
+              <p>Furthermore, our 0D-OMHHs are non-toxic, lead-free, rare-earth-free, and they are fabricated with energy-saving processing, offering a sustainable alternative that aligns with the environmental goals of modern industries and regulatory standards.</p>
             </div>
           </div>
         </section>
@@ -97,7 +98,7 @@
                 <img src="/tech3.png" alt="Flexible & Large-Area">
               </div>
               <h3>Flexible</h3>
-              <p>Offers flexible sheets or thin film coated on bendable substrates.</p>
+              <p>Offers flexible sheets or thin films coated on bendable substrates.</p>
             </div>
             
             <div class="feature-card">
