--- a/about.html
+++ b/about.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/favicon.svg" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ROENTGEN MATTERS — About Us</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,7 +32,7 @@
     <div class="container">
       <!-- Introduction Section -->
       <section class="intro-section">
-        <p class="intro-text"><strong>Roentgen Matters LLC</strong> is a deep-tech startup commercializing novel hybrid materials for next-generation radiation scintillation and detection. Building upon groundbreaking research in organic–inorganic hybrid scintillators and direct detectors, our technology provides a powerful new radiation solution for homeland security, nuclear industry, nuclear medicine, industrial non-destructive testing, medical imaging, and high energy physics applications.</p>
+        <p class="intro-text"><strong>Roentgen Matters</strong> is a deep-tech startup commercializing novel hybrid materials for next-generation radiation scintillation and detection. Building upon groundbreaking research in organic–inorganic hybrid scintillators and direct detectors, our technology provides a powerful new radiation solution for homeland security, nuclear industry, nuclear medicine, industrial non-destructive testing, medical imaging, and high energy physics applications.</p>
       </section>
 
       <!-- Mission & Vision Section -->
@@ -77,7 +78,7 @@
           <div class="leader-card">
             <h3>Dr. Biwu Ma</h3>
             <div class="title">Cofounder & CTO</div>
-            <p>Dr. Ma, a world-renowned expert in a range of advanced materials, is a professor of chemistry and biochemistry at Florida State University. He invented zero-dimensional organic metal halide hybrid (0D-OMHH) materials. With over 20 years of academic research experience, his work spans organic materials and organic-inorganic hybrid materials for applications in radiation detection, optoelectronics, electronics, and sensors. Dr. Ma holds more than 20 issued U.S. patents on organic and hybrid materials.</p>
+            <p>Dr. Ma, a world-renowned expert in a range of advanced materials, is a professor of chemistry and biochemistry at Florida State University. He invented zero-dimensional organic metal halide hybrid (0D-OMHH) materials. With over 20 years of academic research experience, his work spans organic materials and organic-inorganic hybrid materials for applications in radiation detection, optoelectronics, electronics, and sensors. Dr. Ma holds more than 20 issued patents on organic and hybrid materials.</p>
             <div class="leader-buttons">
               <a href="https://www.linkedin.com/in/biwu-ma-53b59610/" target="_blank" class="leader-button">
                 🔗 LinkedIn
