--- a/products.html
+++ b/products.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/favicon.svg" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ROENTGEN MATTERS — Our Products</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,7 +34,7 @@
           <div class="materials-text">
             <h2>0D-OMHH Materials</h2>
             <p>Roentgen Matters offers proprietary, cutting-edge zero-dimensional organic metal halide hybrid (0D-OMHH) material samples engineered for scalable, and high-performance solutions across various radiation detection applications.</p>
-            <p>Our materials can detect <strong>X-rays, gamma rays, neutrons, beta ray, muons, and other high-energy particles</strong>, serving critical needs across homeland security, nuclear industry, nuclear medicine, industrial non-destructive testing, medical imaging, and high energy physics sectors etc.</p>
+            <p>Our materials can detect <strong>X-rays, gamma rays, neutrons, beta rays, muons, and other high-energy particles</strong>, serving critical needs across homeland security, nuclear industry, nuclear medicine, industrial non-destructive testing, medical imaging, and high energy physics sectors etc.</p>
           </div>
           <div class="materials-image">
             <img src="/product.png" alt="Flexible glowing material sheet">
