--- a/technology.html
+++ b/technology.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/favicon.svg" />
+  <link rel="icon" type="image/x-icon" href="/rgmatters/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/rgmatters/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ROENTGEN MATTERS — Our Technology</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,8 +16,8 @@
     body{background:#E0E7FF;background:linear-gradient(90deg,rgba(224,231,255,0.5) 0%,rgba(255,255,255,0) 100%),linear-gradient(180deg,rgba(0,126,164,0.25) 0%,rgba(255,255,255,1) 100%);min-height:100vh;margin:0;padding:0;overflow-x:hidden}
     .container{margin-left:115px;margin-right:0;padding:24px;max-width:none}
   </style>
-  <script type="module" crossorigin src="/rgmatters/assets/main-DZj57P4I.js"></script>
-  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-B0KTyt-O.css">
+  <script type="module" crossorigin src="/rgmatters/assets/main-DSIHPURU.js"></script>
+  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-CL2i4Uo_.css">
 </head>
 <body>
 
@@ -60,8 +61,8 @@
               </div>
             </div>
             <div class="problem-text">
-              <p>Our patented organic–inorganic hybrid materials, known as zero-dimensional organic metal halide hybrids (0D-OMHHs), are designed to drive the next generation of radiation scintillators and detectors. These advanced 0D-OMHH materials uniquely combine the benefits of both organic and inorganic materials, offering a powerful synergy of high-sensitivity, fast response, non-hygroscopicity, flexibility, and scalability through low-cost synthesis. This breakthrough technology enables the creation of affordable, flexible, large-area radiation scintillators and detectors with high sensitivity and fast response. This will spur innovation in critical sectors such as homeland security, nuclear industry, nuclear medicine, industrial non-destructive testing, medical imaging, and high energy physics.</p>
-              <p>Furthermore, our 0D-OMHHs are non-toxic, lead-free, and rare-earth-free, and they are fabricated with energy-saving processing, offering a sustainable alternative that aligns with the environmental goals of modern industries and regulatory standards.</p>
+              <p>Our patented organic–inorganic hybrid materials, known as zero-dimensional organic metal halide hybrids (0D-OMHHs), are designed to drive the next generation of radiation scintillators and detectors. These advanced 0D-OMHH materials uniquely combine the benefits of both organic and inorganic materials, <strong>offering a powerful synergy of high-sensitivity, fast response, non-hygroscopicity, flexibility, and scalability through low-cost synthesis</strong>. This breakthrough technology enables the creation of affordable, flexible, large-area radiation scintillators and detectors with high sensitivity and fast response. This will spur innovation in critical sectors such as homeland security, nuclear industry, nuclear medicine, industrial non-destructive testing, medical imaging, and high energy physics.</p>
+              <p>Furthermore, our 0D-OMHHs are non-toxic, lead-free, rare-earth-free, and they are fabricated with energy-saving processing, offering a sustainable alternative that aligns with the environmental goals of modern industries and regulatory standards.</p>
             </div>
           </div>
         </section>
@@ -99,7 +100,7 @@
                 <img src="/rgmatters/tech3.png" alt="Flexible & Large-Area">
               </div>
               <h3>Flexible</h3>
-              <p>Offers flexible sheets or thin film coated on bendable substrates.</p>
+              <p>Offers flexible sheets or thin films coated on bendable substrates.</p>
             </div>
             
             <div class="feature-card">
