--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/favicon.svg" />
+  <link rel="icon" type="image/x-icon" href="/rgmatters/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/rgmatters/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ROENTGEN MATTERS — Contact Us</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,8 +16,8 @@
     body{background:#ffffff;color:#1a1a1a}
     .container{margin-left:115px;margin-right:0;padding:24px;max-width:none}
   </style>
-  <script type="module" crossorigin src="/rgmatters/assets/main-DZj57P4I.js"></script>
-  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-B0KTyt-O.css">
+  <script type="module" crossorigin src="/rgmatters/assets/main-DSIHPURU.js"></script>
+  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-CL2i4Uo_.css">
 </head>
 <body>
   <main>
