--- a/products.html
+++ b/products.html
@@ -16,8 +16,8 @@
     body{background:#ffffff;color:#1a1a1a}
     .container{margin-left:115px;margin-right:0;padding:24px;max-width:none}
   </style>
-  <script type="module" crossorigin src="/rgmatters/assets/main-DSIHPURU.js"></script>
-  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-CL2i4Uo_.css">
+  <script type="module" crossorigin src="/rgmatters/assets/main-DuLa2dEv.js"></script>
+  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-CKa5FI1K.css">
 </head>
 <body>
   <main>
@@ -25,7 +25,7 @@
     <section class="hero-section">
       <div class="hero-content">
         <div class="hero-header">OUR PRODUCTS</div>
-        <h1 class="hero-title">Proprietary 0D-OMHH Materials for Radiation Scintillation and Detection</h1>
+        <h1 class="hero-title">Proprietary Hybrid Materials for Radiation Scintillation and Direct Detection</h1>
       </div>
     </section>
 
@@ -34,8 +34,8 @@
       <section class="materials-section">
         <div class="materials-content">
           <div class="materials-text">
-            <h2>0D-OMHH Materials</h2>
-            <p>Roentgen Matters offers proprietary, cutting-edge zero-dimensional organic metal halide hybrid (0D-OMHH) material samples engineered for scalable, and high-performance solutions across various radiation detection applications.</p>
+            <h2>OMHH Materials</h2>
+            <p>Roentgen Matters offers proprietary, cutting-edge organic metal halide hybrid (OMHH) material samples, engineered for scalable, and high-performance solutions across various radiation scintillation and direct detection applications.</p>
             <p>Our materials can detect <strong>X-rays, gamma rays, neutrons, beta rays, muons, and other high-energy particles</strong>, serving critical needs across homeland security, nuclear industry, nuclear medicine, industrial non-destructive testing, medical imaging, and high energy physics sectors etc.</p>
           </div>
           <div class="materials-image">
