--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
     body{background:#ffffff;color:#1a1a1a}
     .container{margin-left:115px;margin-right:0;padding:24px;max-width:none}
   </style>
-  <script type="module" crossorigin src="/rgmatters/assets/main-DSIHPURU.js"></script>
-  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-CL2i4Uo_.css">
+  <script type="module" crossorigin src="/rgmatters/assets/main-DuLa2dEv.js"></script>
+  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-CKa5FI1K.css">
 </head>
 <body>
 
@@ -69,7 +69,7 @@
           <div class="leader-card">
             <h3>Dr. Zhonghui Chen</h3>
             <div class="title">Cofounder & CEO</div>
-            <p>Dr. Chen is a seasoned leader with 20 years of experience in semiconductor R&D and manufacturing at Intel Corp. He has a proven track record of translating cutting-edge research into commercially impactful technologies. A former assistant professor specializing in inorganic materials and devices for photon detection at USC and CUNY before joining Intel, he now leads the effort to bring these groundbreaking hybrid materials for radiation detection from lab to market.</p>
+            <p>Dr. Chen is a seasoned leader with 20 years of experience in semiconductor research, technology development, and high-volume manufacturing at Intel Corp. He has a proven track record of translating cutting-edge research into commercially impactful technologies. A former assistant professor specializing in inorganic materials and devices for photon detection at USC and CUNY before joining Intel, he now leads the effort to bring these groundbreaking hybrid materials for radiation detection from lab to market.</p>
             <div class="leader-buttons">
               <a href="https://www.linkedin.com/in/zhonghuichen/" target="_blank" class="leader-button">
                 🔗 LinkedIn
@@ -80,7 +80,7 @@
           <div class="leader-card">
             <h3>Dr. Biwu Ma</h3>
             <div class="title">Cofounder & CTO</div>
-            <p>Dr. Ma, a world-renowned expert in a range of advanced materials, is a professor of chemistry and biochemistry at Florida State University. He invented zero-dimensional organic metal halide hybrid (0D-OMHH) materials. With over 20 years of academic research experience, his work spans organic materials and organic-inorganic hybrid materials for applications in radiation detection, optoelectronics, electronics, and sensors. Dr. Ma holds more than 20 issued patents on organic and hybrid materials.</p>
+            <p>Dr. Ma, a world-renowned expert in a range of advanced materials, is a professor of chemistry and biochemistry at Florida State University. He invented organic metal halide hybrid (OMHH) materials for radiation scintillation and detection. With over 20 years of academic research experience, his work spans organic materials and organic-inorganic hybrid materials for applications in radiation detection, optoelectronics, electronics, and sensors. Dr. Ma holds more than 20 issued patents on organic and hybrid materials.</p>
             <div class="leader-buttons">
               <a href="https://www.linkedin.com/in/biwu-ma-53b59610/" target="_blank" class="leader-button">
                 🔗 LinkedIn
