Removing bad words

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
         <div class="leadership-grid">
           <div class="leader-card">
             <h3>Dr. Zhonghui Chen</h3>
-            <div class="title">Cofounder & CEO</div>
+            <div class="title">CEO & Co-Founder</div>
             <p>Dr. Chen is a seasoned leader with 20 years of experience in semiconductor research, technology development, and high-volume manufacturing at Intel Corp. He has a proven track record of translating cutting-edge research into commercially impactful technologies. A former assistant professor specializing in inorganic materials and devices for photon detection at USC and CUNY before joining Intel, he now leads the effort to bring these groundbreaking hybrid materials for radiation detection from lab to market.</p>
             <div class="leader-buttons">
               <a href="https://www.linkedin.com/in/zhonghuichen/" target="_blank" class="leader-button">
@@ -77,8 +77,8 @@
           
           <div class="leader-card">
             <h3>Dr. Biwu Ma</h3>
-            <div class="title">Cofounder & CTO</div>
-            <p>Dr. Ma, a world-renowned expert in a range of advanced materials, is a professor of chemistry and biochemistry at Florida State University. He invented organic metal halide hybrid (OMHH) materials for radiation scintillation and detection. With over 20 years of academic research experience, his work spans organic materials and organic-inorganic hybrid materials for applications in radiation detection, optoelectronics, electronics, and sensors. Dr. Ma holds more than 20 issued patents on organic and hybrid materials.</p>
+            <div class="title">CTO & Co-Founder</div>
+            <p>Dr. Ma, a world-renowned expert in a range of advanced materials, is a professor of chemistry and biochemistry. He invented organic inorganic hybrid materials for radiation scintillation and detection. With over 20 years of academic research experience, his work spans organic materials and organic-inorganic hybrid materials for applications in radiation detection, optoelectronics, electronics, and sensors. Dr. Ma holds more than 20 issued patents on organic and hybrid materials.</p>
             <div class="leader-buttons">
               <a href="https://www.linkedin.com/in/biwu-ma-53b59610/" target="_blank" class="leader-button">
                 🔗 LinkedIn
