--- a/products.html
+++ b/products.html
@@ -28,12 +28,10 @@
     </section>
 
     <div class="container">
-      <!-- 0D OMHH Materials Section -->
       <section class="materials-section">
         <div class="materials-content">
           <div class="materials-text">
-            <h2>OMHH Materials</h2>
-            <p>Roentgen Matters offers proprietary, cutting-edge organic metal halide hybrid (OMHH) material samples, engineered for scalable, and high-performance solutions across various radiation scintillation and direct detection applications.</p>
+            <p>Roentgen Matters offers proprietary, cutting-edge organic inorganic material samples, engineered for scalable, and high-performance solutions across various radiation scintillation and direct detection applications.</p>
             <p>Our materials can detect <strong>X-rays, gamma rays, neutrons, beta rays, muons, and other high-energy particles</strong>, serving critical needs across homeland security, nuclear industry, nuclear medicine, industrial non-destructive testing, medical imaging, and high energy physics sectors etc.</p>
           </div>
           <div class="materials-image">
