--- a/products.html
+++ b/products.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" type="image/x-icon" href="/rgmatters/favicon.ico" />
-  <link rel="shortcut icon" type="image/x-icon" href="/rgmatters/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ROENTGEN MATTERS — Our Products</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,8 +16,8 @@
     body{background:#ffffff;color:#1a1a1a}
     .container{margin-left:115px;margin-right:0;padding:24px;max-width:none}
   </style>
-  <script type="module" crossorigin src="/rgmatters/assets/main-DuLa2dEv.js"></script>
-  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-CKa5FI1K.css">
+  <script type="module" crossorigin src="/assets/main-BUeiNiJI.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/main-Bic82BDj.css">
 </head>
 <body>
   <main>
@@ -30,16 +30,14 @@
     </section>
 
     <div class="container">
-      <!-- 0D OMHH Materials Section -->
       <section class="materials-section">
         <div class="materials-content">
           <div class="materials-text">
-            <h2>OMHH Materials</h2>
-            <p>Roentgen Matters offers proprietary, cutting-edge organic metal halide hybrid (OMHH) material samples, engineered for scalable, and high-performance solutions across various radiation scintillation and direct detection applications.</p>
+            <p>Roentgen Matters offers proprietary, cutting-edge organic inorganic material samples, engineered for scalable, and high-performance solutions across various radiation scintillation and direct detection applications.</p>
             <p>Our materials can detect <strong>X-rays, gamma rays, neutrons, beta rays, muons, and other high-energy particles</strong>, serving critical needs across homeland security, nuclear industry, nuclear medicine, industrial non-destructive testing, medical imaging, and high energy physics sectors etc.</p>
           </div>
           <div class="materials-image">
-            <img src="/rgmatters/product.png" alt="Flexible glowing material sheet">
+            <img src="/product.png" alt="Flexible glowing material sheet">
           </div>
         </div>
       </section>
@@ -51,27 +49,27 @@
         
         <div class="forms-grid">
           <div class="form-card">
-            <div class="form-icon"><img src="/rgmatters/mat1.png" alt="Single Crystals"></div>
+            <div class="form-icon"><img src="/mat1.png" alt="Single Crystals"></div>
             <h3>Single Crystals</h3>
           </div>
           <div class="form-card">
-            <div class="form-icon"><img src="/rgmatters/mat2.png" alt="Powders"></div>
+            <div class="form-icon"><img src="/mat2.png" alt="Powders"></div>
             <h3>Powders</h3>
           </div>
           <div class="form-card">
-            <div class="form-icon"><img src="/rgmatters/mat3.png" alt="Glass"></div>
+            <div class="form-icon"><img src="/mat3.png" alt="Glass"></div>
             <h3>Glass</h3>
           </div>
           <div class="form-card">
-            <div class="form-icon"><img src="/rgmatters/mat4.png" alt="Amorphous Thin Films"></div>
+            <div class="form-icon"><img src="/mat4.png" alt="Amorphous Thin Films"></div>
             <h3>Amorphous Thin Films</h3>
           </div>
           <div class="form-card">
-            <div class="form-icon"><img src="/rgmatters/mat5.png" alt="Flexible Sheets"></div>
+            <div class="form-icon"><img src="/mat5.png" alt="Flexible Sheets"></div>
             <h3>Flexible Sheets</h3>
           </div>
           <div class="form-card">
-            <div class="form-icon"><img src="/rgmatters/mat6.png" alt="Inks & Solutions"></div>
+            <div class="form-icon"><img src="/mat6.png" alt="Inks & Solutions"></div>
             <h3>Inks & Solutions</h3>
           </div>
         </div>
@@ -82,23 +80,23 @@
         <h2>Detection Capabilities</h2>
         <div class="capabilities-list">
           <div class="capability-item">
-            <div class="capability-icon"><img src="/rgmatters/det1.png" alt="X-rays & Gamma Rays"></div>
+            <div class="capability-icon"><img src="/det1.png" alt="X-rays & Gamma Rays"></div>
             <span>X-rays & Gamma Rays</span>
           </div>
           <div class="capability-item">
-            <div class="capability-icon"><img src="/rgmatters/det4.png" alt="Neutrons"></div>
+            <div class="capability-icon"><img src="/det4.png" alt="Neutrons"></div>
             <span>Neutrons</span>
           </div>
           <div class="capability-item">
-            <div class="capability-icon"><img src="/rgmatters/det2.png" alt="Beta Rays"></div>
+            <div class="capability-icon"><img src="/det2.png" alt="Beta Rays"></div>
             <span>Beta Rays</span>
           </div>
           <div class="capability-item">
-            <div class="capability-icon"><img src="/rgmatters/det3.png" alt="Muons"></div>
+            <div class="capability-icon"><img src="/det3.png" alt="Muons"></div>
             <span>Muons</span>
           </div>
           <div class="capability-item">
-            <div class="capability-icon"><img src="/rgmatters/det5.png" alt="High-Energy Particles"></div>
+            <div class="capability-icon"><img src="/det5.png" alt="High-Energy Particles"></div>
             <span>High-Energy Particles</span>
           </div>
         </div>
@@ -113,7 +111,7 @@
           <div class="inquiries-content">
             <div class="inquiry-card">
               <div class="inquiry-header">
-                <img src="/rgmatters/inq1.png" alt="Required Information" class="inquiry-icon">
+                <img src="/inq1.png" alt="Required Information" class="inquiry-icon">
                 <h3>Required Information</h3>
               </div>
               <ul class="inquiry-list">
@@ -126,7 +124,7 @@
             
             <div class="inquiry-card">
               <div class="inquiry-header">
-                <img src="/rgmatters/inq2.png" alt="Ready?" class="inquiry-icon">
+                <img src="/inq2.png" alt="Ready?" class="inquiry-icon">
                 <h3>Ready?</h3>
               </div>
               <p class="inquiry-text">Our team is ready to collaborate with you to enable your project successful.</p>
