--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" type="image/x-icon" href="/rgmatters/favicon.ico" />
-  <link rel="shortcut icon" type="image/x-icon" href="/rgmatters/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ROENTGEN MATTERS — Contact Us</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,8 +16,8 @@
     body{background:#ffffff;color:#1a1a1a}
     .container{margin-left:115px;margin-right:0;padding:24px;max-width:none}
   </style>
-  <script type="module" crossorigin src="/rgmatters/assets/main-DuLa2dEv.js"></script>
-  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-CKa5FI1K.css">
+  <script type="module" crossorigin src="/assets/main-BUeiNiJI.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/main-Bic82BDj.css">
 </head>
 <body>
   <main>
@@ -51,7 +51,7 @@
           <div class="inquiries-content">
             <div class="inquiry-card">
               <div class="inquiry-header">
-                <img src="/rgmatters/inq1.png" alt="Required Information" class="inquiry-icon">
+                <img src="/inq1.png" alt="Required Information" class="inquiry-icon">
                 <h3>Required Information</h3>
               </div>
               <ul class="inquiry-list">
@@ -64,7 +64,7 @@
             
             <div class="inquiry-card">
               <div class="inquiry-header">
-                <img src="/rgmatters/inq2.png" alt="Ready?" class="inquiry-icon">
+                <img src="/inq2.png" alt="Ready?" class="inquiry-icon">
                 <h3>Ready?</h3>
               </div>
               <p class="inquiry-text">Our team is ready to collaborate with you to enable your project successful.</p>
