--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" type="image/x-icon" href="/rgmatters/favicon.ico" />
-  <link rel="shortcut icon" type="image/x-icon" href="/rgmatters/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ROENTGEN MATTERS — Home</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,8 +17,8 @@
     .container{margin-left:115px;margin-right:0;padding:24px;max-width:none}
     main{padding:210px 0 0px 0}
   </style>
-  <script type="module" crossorigin src="/rgmatters/assets/main-DuLa2dEv.js"></script>
-  <link rel="stylesheet" crossorigin href="/rgmatters/assets/main-CKa5FI1K.css">
+  <script type="module" crossorigin src="/assets/main-BUeiNiJI.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/main-Bic82BDj.css">
 </head>
 <body>
   <main>
